# idrac-wrapper

./: idrac-cheatsheet.yaml  idrac.yaml  install.sh  location.py  pyproject.toml  requirements.txt  server_location.py  setup.py
idrac/: idracaccessor.py  objects.py
scripts/: __init__.py  accounts.py  manage.py
src/dell/: getall.sh  getmacs.sh
src/idrac/: __init__.py  idracaccessor.py  idracclass.py  update.py
src/scripts/: __init__.py  accounts.py  info.py  main.py  manage.py  network.py  summary.py
