[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "idracwrapper"
version = "1.4"
maintainers = [{name = "Gerard Weatherby", email = "gweatherby@uchc.edu"}]
description = "iDRAC redfish library wrapper"
readme = {file = "README.rst", content-type = "text/x-rst"}
dependencies = ["keyring", "redfish", "requests"]

[project.scripts]
idrac = "scripts.manage:main"
accounts = "scripts.accounts:main"
tsr = "scripts.tsr:main"
attribute = "scripts.attribute:main"
network = "scripts.network:main"


[tool.setuptools]
package-dir = { "" = "src"}

